--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <meta name="theme-color" content="#f50005" />
+  <style>
+    body {
+      background: #f50005
+    }
+  </style>
 </head>
 
 <body>
